# TSelect

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt  setup.py
src/tselect/channel_selectors/: tselect.py
src/tselect/rank_correlation/: spearman.c
src/tsfuse/data/: df.c
src/tsfuse/transformers/calculators/: cstatistics.c  queries.c
tselect/: pyproject.toml  requirements.txt  setup.py
tselect/tselect/: __init__.py  abstract_extractor.py  config.py  minirocket.py  tsfresh.py  univariate_ensemble.py
tselect/tselect.egg-info/: PKG-INFO  SOURCES.txt
tselect/tselect/channel_selectors/: tselect.py  wrappers.py
tselect/tselect/rank_correlation/: rank_correlation.py  setup.py  spearman.c  spearman.pyx
tselect/tselect/utils/: __init__.py  constants.py  metrics.py
tselect/tsfilter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tsfilter/: requirements.txt  setup.py
tsfilter/tsfilter/: __init__.py  abstract_extractor.py  catch22.py  minirocket.py  univariate_ensemble.py
tsfilter/tsfilter/filters/: minirocketfilter.py  tsfilter.py
tsfilter/tsfilter/rank_correlation/: rank_correlation.py  setup.py  spearman.c  spearman.cp39-win_amd64.pyd  spearman.pyx
tsfilter/tsfilter/utils/: __init__.py  constants.py
tsfuse/: requirements.txt  setup.py
tsfuse/tsfuse/computation/: nodes.py
tsfuse/tsfuse/construction/: mlj20.py
tsfuse/tsfuse/data/: __init__.py  tags.py
tsfuse/tsfuse/transformers/: boolean.py  frequency.py  geometry.py  mathematics.py  peaks.py  queries.py  sampling.py  statistics.py  uniqueness.py  util.py
(+1 files in other folders)
