[tool.poetry]
name = "TSelect"
version = "0.1.2"
description = "Package for selecting the relevant and non-redundant signals for multivariate time series classification."
authors = ["Loren Nuyts <loren.nuyts@kuleuven.be>",
           "Arne De Brabandere"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
